cabal-version:       >=1.10

name:                AdventOfCode
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Abastro
maintainer:          abab9579@naver.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable AdventOfCode
  main-is:             Main.hs
  other-modules:
      Common
      Y2020.Prob1
      Y2020.Prob2
      Y2020.Prob3
      Y2020.Prob4
      Y2020.Prob5
      Y2020.Prob6
      Y2020.Prob7
      Y2020.Prob8
      Y2020.Prob9
      Y2020.Prob10
      Y2020.Prob11
      Y2020.Prob12
      Y2020.Prob13
      Y2020.Prob14
      Y2020.Prob15
      Y2020.Prob16
  build-depends:
      base >=4.13 && <4.14
    , containers ==0.6.*
    , hashable ==1.3.*
    , unordered-containers ==0.2.*
    , mtl ==2.2.*
  hs-source-dirs:      src/
  default-language:    Haskell2010
  default-extensions:
      TupleSections
      DeriveGeneric
