cabal-version:       >=1.10

name:                AdventOfCode
version:             0.1.0.0
author:              Abastro
maintainer:          abab9579@naver.com
build-type:          Simple

executable AdventOfCode
  main-is:             Main.hs
  other-modules:
      Common
      ProbSol

      Y2020.Prob1
      Y2020.Prob2
      Y2020.Prob3
      Y2020.Prob4
      Y2020.Prob5
      Y2020.Prob6
      Y2020.Prob7
      Y2020.Prob8
      Y2020.Prob9
      Y2020.Prob10
      Y2020.Prob11
      Y2020.Prob12
      Y2020.Prob13
      Y2020.Prob14
      Y2020.Prob15
      Y2020.Prob15a
      Y2020.Prob16
      Y2020.Prob17
      Y2020.Prob18
      Y2020.Prob19
      Y2020.Prob20
      Y2020.Prob21
      Y2020.Prob22
      Y2020.Prob23
      Y2020.Prob23a
      Y2020.Prob24
      Y2020.Prob25
      Y2020.Y2020

      Y2021.Prob01
      Y2021.Prob02
      Y2021.Prob03
      Y2021.Prob04
      Y2021.Prob05
      Y2021.Prob06
      Y2021.Prob07
      Y2021.Prob08
      Y2021.Prob09
      Y2021.Prob10
      Y2021.Prob11
      Y2021.Prob12
      Y2021.Prob13
      Y2021.Prob14
      Y2021.Prob15
      Y2021.Prob16
      Y2021.Prob17
      Y2021.Prob18
      Y2021.Prob19
      Y2021.Prob20
      Y2021.Prob21
      Y2021.Prob22
      Y2021.Prob22b
      Y2021.Prob23
      Y2021.Prob24
      Y2021.Prob25
      Y2021.Prob25b
      Y2021.Y2021

  build-depends:
      base >=4.13 && <5
    , containers >=0.6.3 && <0.7
    , hashable ==1.3.*
    , unordered-containers ==0.2.*
    , vector ==0.12.*
    , transformers ==0.5.*
    , mtl ==2.2.*
    , derive-storable ==0.3.*
    , multiset== 0.3.*
    , wide-word== 0.1.*
    -- TODO Perhaps use "foundation"
    -- Just to simply measure some time
    , timeit ==2.*
    , criterion ==1.5.*
  hs-source-dirs:      src/
  ghc-options:      -W  -threaded +RTS -N -RTS

  default-language:    Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveGeneric
    DerivingVia
    TupleSections
    LambdaCase
    TypeApplications
